--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script src="./js/task-1.js" defer type="module"></script>
     <script src="./js/task-2.js" defer type="module"></script>
     <script src="./js/task-3.js" defer type="module"></script>
-      </body>
+    <script src="./js/task-4.js" defer type="module"></script>
+  </body>
 </html>
